--- a/angular/src/app/main/reconcilliation/amortized/amortized.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/amortized.component.html
@@ -103,8 +103,8 @@
                         </div>
                         <!--<Primeng-TurboTable-End> {{i.creationTime | date:'d MMM EEE'}} -->
                         <table class="table record-table">
-                            <tbody>
-                                <tr *ngFor="let item of amortizedItemList" class="task-table-inner table-repeater">
+                            <tbody *ngFor="let item of amortizedItemList">
+                                <tr  class="task-table-inner table-repeater">
                                     <td class="accountNo-cell">
                                         <span class="">{{item.startDate | date}}</span>
                                     </td>
@@ -140,7 +140,7 @@
                                         </span>
                                     </td>
                                     <td class="toggle-btn-cell">
-                                        <div class="taggle-btn"></div>
+                                        <div (click)="collapsibleRowClick(item.id)" class="taggle-btn"></div>
                                     </td>
                                 </tr>
                                 <!-- show-collapsible-row -->
@@ -151,7 +151,7 @@
                                             <li class="reconciliation-cell collapsable-cell">
                                                 <div class="thead-box"><b>Net Amount : </b></div>
                                                 <div class="tdata-box">
-                                                    <span class="">R</span>
+                                                    <span class="">{{item.netAmount}}</span>
                                                 </div>
                                             </li>
                                             <li class="accountSubtype-cell collapsable-cell">
@@ -163,8 +163,7 @@
                                                                 <div class="drag_drop_box">
                                                                     <div class="attachments_section">
                                                                         <a target="_blank" class="attachement_btn">
-                                                                            <img
-                                                                                src="../../../../assets/media/files/pdf.svg">
+                                                                            <img src="../../../../assets/media/files/pdf.svg">
                                                                             <span> Dumpy Attachemt</span>
                                                                         </a>
                                                                     </div>
